Fix horizontal scroll issue in mobile home view

--- a/public/index.scss
+++ b/public/index.scss
@@ -44,10 +44,6 @@ body {
     min-height: calc(100vh - (50px + 58px));
 }
 
-.ng-scope{
-    margin: inherit;
-}
-
 .flash-message-container{
     height: 50px;
 }
